Fix text alignment

--- a/profile-card-component-main/app/scss/_global.scss
+++ b/profile-card-component-main/app/scss/_global.scss
@@ -33,6 +33,7 @@ body {
   margin-top: 2rem;
   position: relative;
   color: white;
+  text-align: center;
 
   a {
     padding: 0.4rem 0.2rem 0.2rem;
